--- a/TestMVP-Retrofit-RxJava/app/src/main/res/layout/activity_main.xml
+++ b/TestMVP-Retrofit-RxJava/app/src/main/res/layout/activity_main.xml
@@ -15,5 +15,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+    <Button
+        android:id="@+id/bt_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="请求"/>
 </android.support.constraint.ConstraintLayout>
